# mujoco-learning

./: .gitignore  README.md  RL_LEARNING_GUIDE.md  pyproject.toml  rl_panda_obstacle_high_profile.py  rl_panda_pickup_cube.py  rl_panda_reach_target_high_profile.py
model/franka_emika_panda/: panda_rl_pickup_cube.xml  scene_with_rl_pickup_cube.xml
scripts/: install_pinocchio.sh  install_pykdl.sh
